# hackillinois-2026

./: .gitignore  App.tsx  BACKEND_API_SPEC.md  README.md  app.json  frontend_modules_plan.md  package-lock.json  package.json  raw_thoughts.txt  tsconfig.json
app/: App.tsx
app/components/: SVGOverlay.test.tsx  SVGOverlay.tsx
app/data/: mock_response.json  mock_response_retry.json
app/screens/: .CompleteScreen.tsx.swp  AnalyzingScreen.tsx  CompleteScreen.tsx  GoalDetailScreen.tsx  GoalsTab.tsx  HistoryDetailScreen.tsx  HistoryTab.tsx  HomeScreen.tsx  MainScreen.tsx  OnboardingScreen.tsx  PlaybackScreen.tsx  RecordingScreen.tsx
app/services/: accountStore.ts  api.ts  goalStore.ts  historyStore.ts
app/styles/: theme.ts
app/types/: index.ts
app_test_script/: IMG_4861 (1).mov  app_test_script.py
backend/: backend.py  elevenlabs_client.py  gemini_client.py  hand_test_script.py  main.py  pose_detection.py  pyproject.toml  test.py
backend/modal_fine_tuning/: README.md  data_acquisition.py  training.py  yolo_cache.json
