[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "modal",
    "gemini_client",
    "torch",
    "transformers",
    "qwen-vl-utils",
    "pydantic",
    "decord",
    "torchvision",
    "python-multipart>=0.0.22",
    "httpx",
    "elevenlabs"
]
[tool.pyright]
venvPath = "."      
venv = ".venv"      
typeCheckingMode = "basic"
