[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "modal",
    "torch",
    "transformers",
    "qwen-vl-utils",
    "pydantic",
    "decord",
    "torchvision",
    "httpx",
    "elevenlabs",
    "outlines"
]
[tool.pyright]
venvPath = "."      
venv = ".venv"      
typeCheckingMode = "basic"
