[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "modal",
    "httpx",
    "elevenlabs",
    "outlines",
    "google-generativeai>=0.8.6",
    "kaggle>=2.0.0",
    "opencv-python>=4.13.0.92",
    "mediapipe>=0.10.32",
]
[tool.pyright]
venvPath = "."      
venv = ".venv"      
typeCheckingMode = "basic"
